Adicionando configuracao do rabbitMq